# duplex-bol

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: results.json  urdu_sentences.txt
configs/: cascade.yaml  moshi_lora.yaml
docs/: RESULTS.md  architecture.md  data-engineering.md  feasibility-report.md
docs/decisions/: 0001-two-track-strategy.md  0002-urdu-tokenizer-swap.md  0003-orchestrator-as-state-machine.md
notebooks/: 01_cascade_track_b_kaggle.ipynb  02_moshi_lora_track_a.ipynb
samples/: README.md  example_call.md  generate_tts_sample.py  two_party_demo.jsonl
scripts/: make_demo_corpus.py  make_figures.py  run_benchmarks.py
src/duplex_bol/: __init__.py  _logging.py  cli.py
src/duplex_bol/audio/: __init__.py  io.py  transforms.py
src/duplex_bol/cascade/: __init__.py  fakes.py  interfaces.py  orchestrator.py  vad.py
src/duplex_bol/data/: __init__.py  common_voice.py  manifest.py  stereo_dialogue.py
src/duplex_bol/eval/: __init__.py  fertility.py  latency.py  wer.py
src/duplex_bol/moshi/: __init__.py  lora.py  tokenizer.py
src/duplex_bol/text/: __init__.py  urdu.py
tests/: conftest.py  test_audio.py  test_cli.py  test_common_voice.py  test_demo_corpus.py  test_fertility.py  test_latency.py  test_manifest.py  test_moshi_lora.py  test_moshi_tokenizer.py  test_orchestrator.py  test_stereo_dialogue.py  test_urdu_text.py  test_wer.py
